Formatting, redo prompttest

--- a/examples/notebooks/ChromaDBExperiment.ipynb
+++ b/examples/notebooks/ChromaDBExperiment.ipynb
@@ -86,8 +86,10 @@
     "from chromadb.utils import embedding_functions\n",
     "\n",
     "\n",
-    "emb_fns = [embedding_functions.SentenceTransformerEmbeddingFunction(model_name=\"paraphrase-MiniLM-L3-v2\"),\n",
-    "           embedding_functions.DefaultEmbeddingFunction()]  # default is \"all-MiniLM-L6-v2\"\n",
+    "emb_fns = [\n",
+    "    embedding_functions.SentenceTransformerEmbeddingFunction(model_name=\"paraphrase-MiniLM-L3-v2\"),\n",
+    "    embedding_functions.DefaultEmbeddingFunction(),\n",
+    "]  # default is \"all-MiniLM-L6-v2\"\n",
     "emb_fns_names = [\"paraphrase-MiniLM-L3-v2\", \"default\"]"
    ]
   },
@@ -128,7 +130,7 @@
     "add_to_collection_params = {\n",
     "    \"documents\": [\"This is a document\", \"This is another document\", \"This is the document.\"],\n",
     "    \"metadatas\": [{\"source\": \"my_source\"}, {\"source\": \"my_source\"}, {\"source\": \"my_source\"}],\n",
-    "    \"ids\": [\"id1\", \"id2\", \"id3\"]\n",
+    "    \"ids\": [\"id1\", \"id2\", \"id3\"],\n",
     "}\n",
     "\n",
     "# Our test queries\n",
@@ -136,15 +138,15 @@
     "\n",
     "\n",
     "# Set up the experiment\n",
-    "experiment = ChromaDBExperiment(chroma_client,\n",
-    "                                collection_name,\n",
-    "                                use_existing_collection,\n",
-    "                                query_collection_params,\n",
-    "                                emb_fns,\n",
-    "                                emb_fns_names,\n",
-    "                                add_to_collection_params,\n",
-    "                               )\n",
-    "\n"
+    "experiment = ChromaDBExperiment(\n",
+    "    chroma_client,\n",
+    "    collection_name,\n",
+    "    use_existing_collection,\n",
+    "    query_collection_params,\n",
+    "    emb_fns,\n",
+    "    emb_fns_names,\n",
+    "    add_to_collection_params,\n",
+    ")"
    ]
   },
   {
@@ -325,18 +327,17 @@
     "\n",
     "# For each query, you can define what the expected ranking is.\n",
     "EXPECTED_RANKING = {\n",
-    "    \"This is a query document\" : [\"id1\", \"id3\", \"id2\"],\n",
-    "    \"This is a another query document\" : [\"id2\", \"id3\", \"id1\"],\n",
+    "    \"This is a query document\": [\"id1\", \"id3\", \"id2\"],\n",
+    "    \"This is a another query document\": [\"id2\", \"id3\", \"id1\"],\n",
     "}\n",
     "\n",
-    "def measure_correlation(\n",
-    "    input_query: str, results: dict, metadata: dict\n",
-    ") -> float:\n",
+    "\n",
+    "def measure_correlation(input_query: str, results: dict, metadata: dict) -> float:\n",
     "    \"\"\"\n",
     "    A simple test that compares the expected ranking for a given query with the actual ranking produced\n",
     "    by the embedding function being tested.\n",
     "    \"\"\"\n",
-    "    correlation, _ = stats.spearmanr(results['ids'][0], EXPECTED_RANKING[input_query])\n",
+    "    correlation, _ = stats.spearmanr(results[\"ids\"][0], EXPECTED_RANKING[input_query])\n",
     "    return correlation"
    ]
   },
@@ -357,7 +358,7 @@
    },
    "outputs": [],
    "source": [
-    "experiment.evaluate(\"ranking_correlation\", measure_correlation, input_key=\"query_texts\")\n"
+    "experiment.evaluate(\"ranking_correlation\", measure_correlation, input_key=\"query_texts\")"
    ]
   },
   {
