--- a/examples/notebooks/HuggingFaceHub.ipynb
+++ b/examples/notebooks/HuggingFaceHub.ipynb
@@ -50,8 +50,9 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['DEBUG'] = \"1\"  # Set to \"1\" if you want to use debug mode.\n",
-    "os.environ['HUGGINGFACEHUB_API_TOKEN'] = \"\""
+    "\n",
+    "os.environ[\"DEBUG\"] = \"1\"  # Set to \"1\" if you want to use debug mode.\n",
+    "os.environ[\"HUGGINGFACEHUB_API_TOKEN\"] = \"\""
    ]
   },
   {
@@ -88,12 +89,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "models = ['gpt2']\n",
+    "models = [\"gpt2\"]\n",
     "prompts = [\n",
     "    \"Who was the first president?\",\n",
     "    \"Who was the first president of the USA?\",\n",
     "]\n",
-    "task = ['text-generation']\n",
+    "task = [\"text-generation\"]\n",
     "temperatures = [0.0, 1.0]\n",
     "\n",
     "experiment = HuggingFaceHubExperiment(models, prompts, task, temperature=temperatures)"
