--- a/examples/notebooks/LlamaHeadToHead.ipynb
+++ b/examples/notebooks/LlamaHeadToHead.ipynb
@@ -68,7 +68,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['OPENAI_API_KEY'] = \"\""
+    "\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"\""
    ]
   },
   {
@@ -113,8 +114,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_paths = ['/Users/stevenkrawczyk/Downloads/llama-7b.ggmlv3.q2_K.bin',    # Download from https://huggingface.co/TheBloke/LLaMa-7B-GGML/tree/main\n",
-    "               '/Users/stevenkrawczyk/Downloads/llama-2-7b.ggmlv3.q2_K.bin']  # Download from https://huggingface.co/TheBloke/Llama-2-7B-GGML/tree/main\n",
+    "model_paths = [\n",
+    "    \"/Users/stevenkrawczyk/Downloads/llama-7b.ggmlv3.q2_K.bin\",  # Download from https://huggingface.co/TheBloke/LLaMa-7B-GGML/tree/main\n",
+    "    \"/Users/stevenkrawczyk/Downloads/llama-2-7b.ggmlv3.q2_K.bin\",\n",
+    "]  # Download from https://huggingface.co/TheBloke/Llama-2-7B-GGML/tree/main\n",
     "prompts = [\n",
     "    \"\"\"\n",
     "    OBJECTIVE:\n",
@@ -132,7 +135,7 @@
     "    Do you offer refunds?\n",
     "    \n",
     "    RESPONSE:\n",
-    "    \"\"\"\n",
+    "    \"\"\",\n",
     "]\n",
     "temperatures = [0.0, 1.0]\n",
     "\n",
@@ -282,17 +285,12 @@
     "    return [choice[\"text\"] for choice in output[\"choices\"]]\n",
     "\n",
     "\n",
-    "def use_gpt4(\n",
-    "    prompt: str, results: Dict, metadata: Dict\n",
-    ") -> float:\n",
+    "def use_gpt4(prompt: str, results: Dict, metadata: Dict) -> float:\n",
     "    \"\"\"\n",
     "    A simple test that checks semantic similarity between the user input\n",
     "    and the model's text responses.\n",
     "    \"\"\"\n",
-    "    distances = [\n",
-    "        autoeval.compute(prompt, response)\n",
-    "        for response in extract_responses(results)\n",
-    "    ]\n",
+    "    distances = [autoeval.compute(prompt, response) for response in extract_responses(results)]\n",
     "    return min(distances)"
    ]
   },
@@ -313,7 +311,7 @@
    },
    "outputs": [],
    "source": [
-    "experiment.evaluate(\"auto-evaluation\", use_gpt4)\n"
+    "experiment.evaluate(\"auto-evaluation\", use_gpt4)"
    ]
   },
   {
