--- a/examples/notebooks/ModelComparison.ipynb
+++ b/examples/notebooks/ModelComparison.ipynb
@@ -50,8 +50,9 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['DEBUG']=\"1\"\n",
-    "os.environ['OPENAI_API_KEY'] = \"\""
+    "\n",
+    "os.environ[\"DEBUG\"] = \"1\"\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"\""
    ]
   },
   {
@@ -95,10 +96,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chat_histories = [[\n",
-    "            {\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},\n",
-    "            {\"role\": \"user\", \"content\": \"Who won the world series in 2020?\"},\n",
-    "]]"
+    "chat_histories = [\n",
+    "    [\n",
+    "        {\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},\n",
+    "        {\"role\": \"user\", \"content\": \"Who won the world series in 2020?\"},\n",
+    "    ]\n",
+    "]"
    ]
   },
   {
