--- a/examples/notebooks/OpenAIChatExperiment.ipynb
+++ b/examples/notebooks/OpenAIChatExperiment.ipynb
@@ -50,8 +50,9 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['DEBUG']=\"1\"\n",
-    "os.environ['OPENAI_API_KEY'] = \"\""
+    "\n",
+    "os.environ[\"DEBUG\"] = \"1\"\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"\""
    ]
   },
   {
@@ -96,11 +97,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "models = ['gpt-3.5-turbo', 'gpt-3.5-turbo-0613']\n",
-    "messages = [[\n",
-    "            {\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},\n",
-    "            {\"role\": \"user\", \"content\": \"Who was the first president?\"},\n",
-    "]]\n",
+    "models = [\"gpt-3.5-turbo\", \"gpt-3.5-turbo-0613\"]\n",
+    "messages = [\n",
+    "    [\n",
+    "        {\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},\n",
+    "        {\"role\": \"user\", \"content\": \"Who was the first president?\"},\n",
+    "    ]\n",
+    "]\n",
     "temperatures = [0.0, 1.0]\n",
     "\n",
     "experiment = OpenAIChatExperiment(models, messages, temperature=temperatures)"
