--- a/examples/notebooks/StructuredOutput.ipynb
+++ b/examples/notebooks/StructuredOutput.ipynb
@@ -50,8 +50,9 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['DEBUG'] = \"1\"  # Set to \"1\" if you want to use debug mode.\n",
-    "os.environ['OPENAI_API_KEY'] = \"\""
+    "\n",
+    "os.environ[\"DEBUG\"] = \"1\"  # Set to \"1\" if you want to use debug mode.\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"\""
    ]
   },
   {
@@ -97,8 +98,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt_templates = [\"Generate valid JSON from the following input: {{input}}\", \"Generate valid python to complete the following task: {{input}}\"]\n",
-    "user_inputs = [{\"input\": \"The task is to count all the words in a string\"}, {\"input\": \"The task is to add up numbers 1 to 100\"}]"
+    "prompt_templates = [\n",
+    "    \"Generate valid JSON from the following input: {{input}}\",\n",
+    "    \"Generate valid python to complete the following task: {{input}}\",\n",
+    "]\n",
+    "user_inputs = [\n",
+    "    {\"input\": \"The task is to count all the words in a string\"},\n",
+    "    {\"input\": \"The task is to add up numbers 1 to 100\"},\n",
+    "]"
    ]
   },
   {
@@ -116,13 +123,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "harness = PromptTemplateExperimentationHarness(OpenAICompletionExperiment,\n",
-    "                                               \"text-davinci-003\", \n",
-    "                                               prompt_templates, \n",
-    "                                               user_inputs,\n",
-    "                                               # Zero temperature is better for\n",
-    "                                               # structured outputs\n",
-    "                                               model_arguments={\"temperature\": 0})"
+    "harness = PromptTemplateExperimentationHarness(\n",
+    "    OpenAICompletionExperiment,\n",
+    "    \"text-davinci-003\",\n",
+    "    prompt_templates,\n",
+    "    user_inputs,\n",
+    "    # Zero temperature is better for\n",
+    "    # structured outputs\n",
+    "    model_arguments={\"temperature\": 0},\n",
+    ")"
    ]
   },
   {
