--- a/examples/notebooks/WeaviateExperiment.ipynb
+++ b/examples/notebooks/WeaviateExperiment.ipynb
@@ -75,7 +75,7 @@
     "# Create class object\n",
     "class_name = \"Question\"\n",
     "\n",
-    "# Clearing existing \n",
+    "# Clearing existing\n",
     "try:\n",
     "    client.batch.delete_objects(class_name=class_name, where={})\n",
     "except Exception:\n",
@@ -89,11 +89,7 @@
     "class_obj = {\n",
     "    \"class\": class_name,\n",
     "    \"vectorizer\": \"text2vec-contextionary\",\n",
-    "    \"moduleConfig\": {\n",
-    "        \"text2vec-contextionary\": {\n",
-    "          \"vectorizeClassName\": \"false\"\n",
-    "        }\n",
-    "    },\n",
+    "    \"moduleConfig\": {\"text2vec-contextionary\": {\"vectorizeClassName\": \"false\"}},\n",
     "}\n",
     "\n",
     "client.schema.create_class(class_obj)"
@@ -130,18 +126,18 @@
    ],
    "source": [
     "# Can skip if you already have data in Weaviate\n",
-    "data = [{'Category': 'science', 'Question': 'How many hydrogens are in H2O?', 'Answer': '2'},\n",
-    "        {'Category': 'math', 'Question': '2+2', 'Answer': '4'},\n",
-    "        {'Category': 'math', 'Question': 'Is 13 a prime number?', 'Answer': 'Yes'},\n",
-    "        {'Category': 'geography', 'Question': 'Which continent is India in?', 'Answer': 'Asia'},\n",
-    "        {'Category': 'geography', 'Question': 'Which continent is China in?', 'Answer': 'Asia'},\n",
-    "        {'Category': 'geography', 'Question': 'Which continent is USA in?', 'Answer': 'North America'},\n",
-    "        {'Category': 'geography', 'Question': 'Which is the largest state in the USA?', 'Answer': 'Alaska'},\n",
-    "        {'Category': 'geography', 'Question': 'Which is the most populous state in the USA?', 'Answer': 'California'},]\n",
+    "data = [\n",
+    "    {\"Category\": \"science\", \"Question\": \"How many hydrogens are in H2O?\", \"Answer\": \"2\"},\n",
+    "    {\"Category\": \"math\", \"Question\": \"2+2\", \"Answer\": \"4\"},\n",
+    "    {\"Category\": \"math\", \"Question\": \"Is 13 a prime number?\", \"Answer\": \"Yes\"},\n",
+    "    {\"Category\": \"geography\", \"Question\": \"Which continent is India in?\", \"Answer\": \"Asia\"},\n",
+    "    {\"Category\": \"geography\", \"Question\": \"Which continent is China in?\", \"Answer\": \"Asia\"},\n",
+    "    {\"Category\": \"geography\", \"Question\": \"Which continent is USA in?\", \"Answer\": \"North America\"},\n",
+    "    {\"Category\": \"geography\", \"Question\": \"Which is the largest state in the USA?\", \"Answer\": \"Alaska\"},\n",
+    "    {\"Category\": \"geography\", \"Question\": \"Which is the most populous state in the USA?\", \"Answer\": \"California\"},\n",
+    "]\n",
     "\n",
-    "with client.batch(\n",
-    "    batch_size=100\n",
-    ") as batch:\n",
+    "with client.batch(batch_size=100) as batch:\n",
     "    for i, d in enumerate(data):\n",
     "        print(f\"importing question: {i+1}\")\n",
     "\n",
@@ -195,14 +191,12 @@
     "    text_query: str,\n",
     "):\n",
     "    near_text_search_operator = {\n",
-    "      \"concepts\": [text_query],\n",
-    "      \"distance\": 0.6,\n",
-    "      \"moveAwayFrom\": {\n",
-    "        \"concepts\": [\"where geography \"],\n",
-    "        \"force\": 0.45\n",
-    "      },\n",
+    "        \"concepts\": [text_query],\n",
+    "        \"distance\": 0.6,\n",
+    "        \"moveAwayFrom\": {\"concepts\": [\"where geography \"], \"force\": 0.45},\n",
     "    }\n",
     "    return client.query.get(class_name, property_names).with_near_text(near_text_search_operator).with_limit(limit=3)\n",
+    "\n",
     "\n",
     "# A dictionary of the name of query builder and the corresponding callable function.\n",
     "query_builders = {\"default\": default_query_builder, \"custom\": custom_query_builder}"
@@ -230,12 +224,14 @@
     "text_queries = [\"Hydrogen\", \"USA\"]  # Your text queries that will be passed in to query builder to create query\n",
     "\n",
     "\n",
-    "experiment = WeaviateExperiment(client=client,\n",
-    "                                class_name=class_name,\n",
-    "                                use_existing_data=use_existing_data,\n",
-    "                                property_names=property_names,\n",
-    "                                text_queries=text_queries,\n",
-    "                                query_builders=query_builders)\n",
+    "experiment = WeaviateExperiment(\n",
+    "    client=client,\n",
+    "    class_name=class_name,\n",
+    "    use_existing_data=use_existing_data,\n",
+    "    property_names=property_names,\n",
+    "    text_queries=text_queries,\n",
+    "    query_builders=query_builders,\n",
+    ")\n",
     "experiment.run()"
    ]
   },
@@ -352,11 +348,12 @@
    "outputs": [],
    "source": [
     "vectorizers_and_moduleConfigs = [\n",
-    "    (\"text2vec-contextionary\", {  # This runs on CPU, but you can swap to `huggingface` or `openai` as well\n",
-    "        \"text2vec-contextionary\": {\n",
-    "          \"vectorizeClassName\": \"false\"\n",
-    "        }\n",
-    "    }),\n",
+    "    (\n",
+    "        \"text2vec-contextionary\",\n",
+    "        {  # This runs on CPU, but you can swap to `huggingface` or `openai` as well\n",
+    "            \"text2vec-contextionary\": {\"vectorizeClassName\": \"false\"}\n",
+    "        },\n",
+    "    ),\n",
     "]"
    ]
   },
@@ -376,19 +373,19 @@
    "outputs": [],
    "source": [
     "property_definitions = [\n",
-    "        {\n",
-    "            'name': 'category',\n",
-    "            'dataType': ['text'],\n",
-    "        },\n",
-    "        {\n",
-    "            'name': 'question',\n",
-    "            'dataType': ['text'],\n",
-    "        },\n",
-    "            {\n",
-    "            'name': 'answer',\n",
-    "            'dataType': ['text'],\n",
-    "        },\n",
-    "    ]\n"
+    "    {\n",
+    "        \"name\": \"category\",\n",
+    "        \"dataType\": [\"text\"],\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"question\",\n",
+    "        \"dataType\": [\"text\"],\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"answer\",\n",
+    "        \"dataType\": [\"text\"],\n",
+    "    },\n",
+    "]"
    ]
   },
   {
@@ -442,16 +439,17 @@
     "text_queries = [\"continent Asia\"]  # Your text queries that will be passed in to query builder to create query\n",
     "\n",
     "\n",
-    "experiment = WeaviateExperiment(client=client,\n",
-    "                                class_name=class_name,\n",
-    "                                use_existing_data=use_existing_data,\n",
-    "                                property_names=property_names,\n",
-    "                                text_queries=text_queries,\n",
-    "                                vectorizers_and_moduleConfigs=vectorizers_and_moduleConfigs,\n",
-    "                                property_definitions=property_definitions,\n",
-    "                                data_objs = data,\n",
-    "                                distance_metrics = distance_metrics,\n",
-    "                               )\n",
+    "experiment = WeaviateExperiment(\n",
+    "    client=client,\n",
+    "    class_name=class_name,\n",
+    "    use_existing_data=use_existing_data,\n",
+    "    property_names=property_names,\n",
+    "    text_queries=text_queries,\n",
+    "    vectorizers_and_moduleConfigs=vectorizers_and_moduleConfigs,\n",
+    "    property_definitions=property_definitions,\n",
+    "    data_objs=data,\n",
+    "    distance_metrics=distance_metrics,\n",
+    ")\n",
     "experiment.run()"
    ]
   },
