--- a/examples/notebooks/AutoEval.ipynb
+++ b/examples/notebooks/AutoEval.ipynb
@@ -50,8 +50,9 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['DEBUG'] = \"\"  # Set to \"1\" if you want to use debug mode.\n",
-    "os.environ['OPENAI_API_KEY'] = \"\""
+    "\n",
+    "os.environ[\"DEBUG\"] = \"\"  # Set to \"1\" if you want to use debug mode.\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"\""
    ]
   },
   {
@@ -97,7 +98,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt_templates = [\"\"\"\n",
+    "prompt_templates = [\n",
+    "    \"\"\"\n",
     "INSTRUCTIONS\n",
     "Answer the following question\n",
     "\n",
@@ -105,8 +107,8 @@
     "{{input}}\n",
     "\n",
     "ANSWER\n",
-    "\"\"\", \n",
-    "\"\"\"\n",
+    "\"\"\",\n",
+    "    \"\"\"\n",
     "INSTRUCTIONS\n",
     "Answer the following question. \n",
     "If it is not prime, give its decomposition\n",
@@ -115,7 +117,8 @@
     "{{input}}\n",
     "\n",
     "ANSWER\n",
-    "\"\"\"]\n",
+    "\"\"\",\n",
+    "]\n",
     "user_inputs = [{\"input\": \"is 17077 a prime number\"}, {\"input\": \"Is 17077 prime?\"}]"
    ]
   },
@@ -134,7 +137,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "harness = PromptTemplateExperimentationHarness(OpenAICompletionExperiment, \"text-davinci-003\", prompt_templates, user_inputs)"
+    "harness = PromptTemplateExperimentationHarness(\n",
+    "    OpenAICompletionExperiment, \"text-davinci-003\", prompt_templates, user_inputs\n",
+    ")"
    ]
   },
   {
