--- a/examples/notebooks/LlamaCppExperiment.ipynb
+++ b/examples/notebooks/LlamaCppExperiment.ipynb
@@ -76,8 +76,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_paths = ['/Users/stevenkrawczyk/Downloads/llama-7b.ggmlv3.q2_K.bin',    # Download from https://huggingface.co/TheBloke/LLaMa-7B-GGML/tree/main\n",
-    "               '/Users/stevenkrawczyk/Downloads/llama-2-7b.ggmlv3.q2_K.bin']  # Download from https://huggingface.co/TheBloke/Llama-2-7B-GGML/tree/main\n",
+    "model_paths = [\n",
+    "    \"/Users/stevenkrawczyk/Downloads/llama-7b.ggmlv3.q2_K.bin\",  # Download from https://huggingface.co/TheBloke/LLaMa-7B-GGML/tree/main\n",
+    "    \"/Users/stevenkrawczyk/Downloads/llama-2-7b.ggmlv3.q2_K.bin\",\n",
+    "]  # Download from https://huggingface.co/TheBloke/Llama-2-7B-GGML/tree/main\n",
     "prompts = [\n",
     "    \"Who was the first president?\",\n",
     "    \"Who was the first president of the USA?\",\n",
