refactor hf experiment

--- a/examples/notebooks/HuggingFaceHub.ipynb
+++ b/examples/notebooks/HuggingFaceHub.ipynb
@@ -44,14 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "fcdc47b7",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "\n",
-    "os.environ[\"DEBUG\"] = \"1\"  # Set to \"1\" if you want to use debug mode.\n",
+    "os.environ[\"DEBUG\"] = \"\"  # Set to \"1\" if you want to use debug mode.\n",
     "os.environ[\"HUGGINGFACEHUB_API_TOKEN\"] = \"\""
    ]
   },
@@ -204,33 +204,33 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Who was the first president?</td>\n",
-       "      <td>[George Washington]</td>\n",
-       "      <td>2.034998e-06</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>Who was the first president?\\n\\nI think it was George Washington. I think it was John</td>\n",
+       "      <td>0.662535</td>\n",
+       "      <td>0.362770</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Who was the first president?</td>\n",
-       "      <td>[George Washington]</td>\n",
-       "      <td>1.084001e-06</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>Who was the first president?\\n\\nI think it was George Washington. I think it was John</td>\n",
+       "      <td>0.405260</td>\n",
+       "      <td>0.362770</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Who was the first president of the USA?</td>\n",
-       "      <td>[George Washington]</td>\n",
-       "      <td>8.910429e-07</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>Who was the first president of the USA?\\n\\nI think it was George Washington. I think</td>\n",
+       "      <td>0.347595</td>\n",
+       "      <td>0.348384</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Who was the first president of the USA?</td>\n",
-       "      <td>[George Washington]</td>\n",
-       "      <td>7.899944e-07</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>Who was the first president of the USA?\\n\\nI think it was George Washington. I think</td>\n",
+       "      <td>0.366199</td>\n",
+       "      <td>0.348384</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -238,17 +238,23 @@
        "</div>"
       ],
       "text/plain": [
-       "                                    prompt          response(s)       latency  \\\n",
-       "0  Who was the first president?             [George Washington]  2.034998e-06   \n",
-       "1  Who was the first president?             [George Washington]  1.084001e-06   \n",
-       "2  Who was the first president of the USA?  [George Washington]  8.910429e-07   \n",
-       "3  Who was the first president of the USA?  [George Washington]  7.899944e-07   \n",
+       "                                    prompt  \\\n",
+       "0  Who was the first president?              \n",
+       "1  Who was the first president?              \n",
+       "2  Who was the first president of the USA?   \n",
+       "3  Who was the first president of the USA?   \n",
        "\n",
-       "   similar_to_expected  temperature  \n",
-       "0  0.0                  0.0          \n",
-       "1  0.0                  1.0          \n",
-       "2  0.0                  0.0          \n",
-       "3  0.0                  1.0          "
+       "                                                                             response(s)  \\\n",
+       "0  Who was the first president?\\n\\nI think it was George Washington. I think it was John   \n",
+       "1  Who was the first president?\\n\\nI think it was George Washington. I think it was John   \n",
+       "2  Who was the first president of the USA?\\n\\nI think it was George Washington. I think    \n",
+       "3  Who was the first president of the USA?\\n\\nI think it was George Washington. I think    \n",
+       "\n",
+       "    latency  similar_to_expected  temperature  \n",
+       "0  0.662535  0.362770             0.0          \n",
+       "1  0.405260  0.362770             1.0          \n",
+       "2  0.347595  0.348384             0.0          \n",
+       "3  0.366199  0.348384             1.0          "
       ]
      },
      "metadata": {},
