Improve README and basic notebook example

--- a/examples/notebooks/OpenAIChatExperiment.ipynb
+++ b/examples/notebooks/OpenAIChatExperiment.ipynb
@@ -50,8 +50,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['DEBUG']=\"1\"\n",
-    "os.environ['OPENAI_API_KEY'] = \"\""
+    "os.environ['DEBUG']=\"1\"  # Set this to \"\" to call OpenAI's API\n",
+    "os.environ['OPENAI_API_KEY'] = \"\"  # Insert your key here"
    ]
   },
   {
@@ -69,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Dict, List, Tuple\n",
+    "from typing import Dict, List\n",
     "from prompttools.experiment import OpenAIChatExperiment"
    ]
   },
@@ -102,6 +102,7 @@
     "            {\"role\": \"user\", \"content\": \"Who was the first president?\"},\n",
     "]]\n",
     "temperatures = [0.0, 1.0]\n",
+    "# You can add more parameters that you'd like to test here.\n",
     "\n",
     "experiment = OpenAIChatExperiment(models, messages, temperature=temperatures)"
    ]
@@ -157,7 +158,7 @@
     "\n",
     "\n",
     "def measure_similarity(\n",
-    "    messages: List[Dict[str, str]], results: Dict, metadata: Dict\n",
+    "    messages: List[Dict[str, str]], results: Dict, _metadata: Dict\n",
     ") -> float:\n",
     "    \"\"\"\n",
     "    A simple test that checks semantic similarity between the user input\n",
